# volaura

./: .env.example  .env.md  .gitattributes  .gitignore  .vercelignore  AC.md  AGENTS.md  ATLAS.md  CLAUDE.md  Dockerfile.railway  HANDOFF-TO-CODEX.md  README.md  START-SESSION-VOLAURA.md  dashboard.html  ecosystem-map.html  null  package.json  playwright.config.ts  pnpm-lock.yaml  railway.toml  turbo.json  vercel.json
apps/api/: .coverage  .env.example  AGENTS.md  Dockerfile  openapi.json  package.json  pyproject.toml  railway.toml  requirements.txt  smoke_campaigns.py
apps/api/app/: config.py  deps.py  main.py
apps/api/tests/: _canonical_example.py  conftest.py  test_activity.py  test_activity_endpoints.py  test_admin.py  test_admin_endpoints.py  test_admin_growth.py  test_analytics.py  test_analytics_endpoints.py  test_antigaming.py  test_assessment.py  test_assessment_admin_bypass.py  test_assessment_api_e2e.py  test_assessment_completion_reconciler.py  test_assessment_consent.py  test_assessment_engine.py  test_assessment_min_items_gate.py  test_assessment_restart.py  test_assessment_router.py  test_assessment_router_pipeline.py  test_assessment_services.py  test_assessment_wuf13_gaps.py  test_atlas_community_invites_schemas.py  test_atlas_consult.py  test_atlas_gateway.py  test_atlas_self_learning.py  test_atlas_tools.py  test_atlas_voice.py  test_audit_regression.py  test_aura.py  test_aura_calc.py  test_aura_endpoints.py  test_aura_reconciler.py  test_aura_scoring.py  test_auth.py  test_auth_bridge.py  test_auth_router.py  test_az_translation.py  test_badges.py  (+129 more)
(+3236 files in other folders)
